added dynamic product add link

--- a/srcare/index.html
+++ b/srcare/index.html
@@ -3182,20 +3182,8 @@
                       <div class="col-md-12 col-12">
                         <h3 class="block-title">HTML5 Themes</h3>
 
-                        <ol class="our-products list">
-                          <li>
-                            <a href="https://themeforest.net/item/activism-buddies-social-campaign-non-profit-html5-template/22432719" target="_blank" title="Activism Buddies - Social Campaign & Non Profit HTML5 Template">
-                              <img src="img/our-templates/activism_buddies.jpg" alt="Activism Buddies - Social Campaign & Non Profit HTML5 Template" />
-                              Activism Buddies - Social Campaign & Non Profit HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/appeal-petition-html5-template/16935278" target="_blank" title="Appeal - Petition HTML5 Template ">
-                              <img src="img/our-templates/appeal.jpg" alt="Appeal - Petition HTML5 Template " />
-                              Appeal - Petition HTML5 Template
-                            </a>
-                          </li>
+                        <ol class="our-products list" id="bwl_html_templates">
+                          
 
                           <li>
                             <a href="https://themeforest.net/item/aqua-shatar-professional-swim-academy-html5-template/22314311" target="_blank" title="Aqua Shatar - Professional Swim Academy HTML5 Template">
@@ -3337,26 +3325,6 @@
                             </a>
                           </li>
 
-                          <li>
-                            <a href="https://themeforest.net/item/senior-care-senior-citizens-elders-support-html5-template/19530660" target="_blank" title="Senior Care - Senior Citizens & Elders Support HTML5 Template">
-                              <img src="img/our-templates/srcare_template.jpg" alt="Senior Care - Senior Citizens & Elders Support HTML5 Template" />
-                              Senior Care - Senior Citizens & Elders Support HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/smartfix-computer-repair-center-html5-template/25748439" target="_blank" title="SmartFix - Computer Repair Center HTML5 Template">
-                              <img src="img/our-templates/smart_fix.jpg" alt="SmartFix - Computer Repair Center HTML5 Template" />
-                              SmartFix - Computer Repair Center HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/wish-charity-fundraising-nonprofit-html5-template/19295978" target="_blank" title="Wish - Charity, Fundraising & Non-Profit HTML5 Template ">
-                              <img src="img/our-templates/wish.jpg" alt="Wish - Charity, Fundraising & Non-Profit HTML5 Template " />
-                              Wish - Charity, Fundraising & Non-Profit HTML5 Template
-                            </a>
-                          </li>
                         </ol>
                       </div>
                     </div>
@@ -3398,5 +3366,6 @@
     <script type="text/javascript" src="assets/js/all.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
     <script type="text/javascript" src="assets/js/changelog.js"></script>
+    <script type="text/javascript" src="assets/js/products.js"></script>
   </body>
 </html>
