update the products.js and thumbnails

--- a/srcare/index.html
+++ b/srcare/index.html
@@ -3036,34 +3036,8 @@
                       <div class="col-md-12 col-12">
                         <h3 class="block-title">WordPress Themes</h3>
 
-                        <ol class="our-products list">
-                          <li>
-                            <a href="https://1.envato.market/kdesk-wp" target="_blank" title="Knowledgedesk - Knowledge Base WP Theme">
-                              <img src="img/our-themes/kdesk_wp.jpg" alt="Knowledgedesk - Knowledge Base WP Theme" />
-                              Knowledgedesk - Knowledge Base WP Theme
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/srcare-wp" target="_blank" title="Senior Care - Elder Citizen WP Theme">
-                              <img src="img/our-themes/srcare_wp.jpg" alt="Senior Care - Elder Citizen WP Theme" />
-                              Senior Care - Elder Citizen WP Theme
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/rbuddies-wp" target="_blank" title="Reddrop Buddies – Activism & Blood Donation Campaign WP Theme">
-                              <img src="img/our-themes/reddrop_buddies_wp.jpg" alt="Reddrop Buddies – Activism & Blood Donation Campaign WP Theme" />
-                              Reddrop Buddies – Activism & Blood Donation Campaign WP Theme
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/skhana-wp" target="_blank" title="Sharai Khana - Multi-Concept Professional Services WP Theme">
-                              <img src="img/our-themes/sharai_khana_wp.jpg" alt="Sharai Khana - Multi-Concept Professional Services WP Theme" />
-                              Sharai Khana - Multi-Concept Professional Services WP Theme
-                            </a>
-                          </li>
+                        <ol class="our-products list" id="bwl_wp_themes">
+                          
 
                           <li>
                             <a href="https://1.envato.market/petapalozza-wp" target="_blank" title="Petapalozza - Pet Care WP Theme ">
@@ -3116,63 +3090,7 @@
                       <div class="col-md-12 col-12">
                         <h3 class="block-title">WordPress Plugins</h3>
 
-                        <ol class="our-products list">
-                          <li>
-                            <a href="https://1.envato.market/baf-wp" target="_blank" title="BWL Advanced FAQ Manager">
-                              <img src="img/our-plugins/baf.png" alt="BWL Advanced FAQ Manager" />
-                              BWL Advanced FAQ Manager
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/bnm-wp" target="_blank" title="BWL Post To Breaking News Manager">
-                              <img src="img/our-plugins/bnm.png" alt="BWL Post To Breaking News Manager" />
-                              BWL Post To Breaking News Manager
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/bpvm-wp" target="_blank" title="BWL Pro Voting Manager">
-                              <img src="img/our-plugins/bpvm.png" alt="BWL Pro Voting Manager" />
-                              BWL Pro Voting Manager
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/bpm-wp" target="_blank" title="BWL Poll Manager">
-                              <img src="img/our-plugins/bpm.png" alt="BWL Poll Manager" />
-                              BWL Poll Manager
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/bkbm-wp" target="_blank" title="BWL Knowledge Base Manager">
-                              <img src="img/our-plugins/bkbm.png" alt="BWL Knowledge Base Manager" />
-                              BWL Knowledge Base Manager
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/wpfm-wp" target="_blank" title="WooCommerce Product FAQ Manager">
-                              <img src="img/our-plugins/wpfm.png" alt="WooCommerce Product FAQ Manager" />
-                              WooCommerce Product FAQ Manager
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/atfc-wp" target="_blank" title="Attachment Tab For Woocommerce">
-                              <img src="img/our-plugins/atfc.png" alt="Attachment Tab For Woocommerce" />
-                              Attachment Tab For Woocommerce
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/usva-wp" target="_blank" title="Ultimate Searchable Accordion - WPBakery Page Builder Addon">
-                              <img src="img/our-plugins/usva.png" alt="Ultimate Searchable Accordion - WPBakery Page Builder Addon" />
-                              Ultimate Searchable Accordion - WPBakery Page Builder Addon
-                            </a>
-                          </li>
-                        </ol>
+                        <ol class="our-products list" id="bwl_wp_plugins"></ol>
                       </div>
                     </div>
                   </div>
