update the srcare 1.3.4 doc

--- a/srcare/index.html
+++ b/srcare/index.html
@@ -138,7 +138,7 @@
                   </nav>
                   <small>
                     <i>Doc Last Update:</i>
-                    <span class="update">21/08/2023</span></small>
+                    <span class="update">-</span></small>
                 </nav>
 
               </div>
@@ -152,9 +152,9 @@
                   <div class="section-block">
                     <ul class="square-list">
                       <li>
-                        <strong>Version:</strong><span class="ver">1.3.3</span></li>
+                        <strong>Version:</strong><span class="ver">-</span></li>
                       <li>
-                        <strong>Recent Update:</strong> <span class="update">21/08/2023</span></li>
+                        <strong>Recent Update:</strong> <span class="update">-</span></li>
                       <li>
                         <strong>Release Date:</strong>
                         21/08/2018</li>
@@ -3035,52 +3035,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <h3 class="block-title">WordPress Themes</h3>
-
-                        <ol class="our-products list" id="bwl_wp_themes">
-                          
-
-                          <li>
-                            <a href="https://1.envato.market/petapalozza-wp" target="_blank" title="Petapalozza - Pet Care WP Theme ">
-                              <img src="img/our-themes/petapalozza_wp.jpg" alt="Petapalozza - Pet Care WP Theme " />
-                              Petapalozza - Pet Care WP Theme
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/appeal-wp" target="_blank" title="Appeal - Functional Petition WP Theme">
-                              <img src="img/our-themes/appeal_wp.jpg" alt="Appeal - Functional Petition WP Theme" />
-                              Appeal - Functional Petition WP Theme
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/wish-wp" target="_blank" title="Wish - Charity WP Theme">
-                              <img src="img/our-themes/wish_wp.jpg" alt="Wish - Charity WP Theme" />
-                              Wish - Charity WP Theme
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/restore-wp" target="_blank" title="Restore - Computer Repair Service WP Theme">
-                              <img src="img/our-themes/restore_wp.jpg" alt="Restore - Computer Repair Service WP Theme" />
-                              Restore - Computer Repair Service WP Theme
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/greenlife-wp" target="_blank" title="Greenlife - Nature & Environmental WP Theme">
-                              <img src="img/our-themes/greenlife_wp.jpg" alt="Greenlife - Nature & Environmental WP Theme" />
-                              Greenlife - Nature & Environmental WP Theme
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://1.envato.market/dynamism-wp" target="_blank" title="Dynamism - Political & Activism WP Theme ">
-                              <img src="img/our-themes/dynamism_wp.jpg" alt="Dynamism - Political & Activism WP Theme " />
-                              Dynamism - Political & Activism WP Theme
-                            </a>
-                          </li>
-                        </ol>
+                        <ol class="our-products list" id="bwl_wp_themes"></ol>
                       </div>
                     </div>
                   </div>
@@ -3089,7 +3044,6 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <h3 class="block-title">WordPress Plugins</h3>
-
                         <ol class="our-products list" id="bwl_wp_plugins"></ol>
                       </div>
                     </div>
@@ -3101,21 +3055,6 @@
                         <h3 class="block-title">HTML5 Themes</h3>
 
                         <ol class="our-products list" id="bwl_html_templates">
-                          
-
-                          <li>
-                            <a href="https://themeforest.net/item/aqua-shatar-professional-swim-academy-html5-template/22314311" target="_blank" title="Aqua Shatar - Professional Swim Academy HTML5 Template">
-                              <img src="img/our-templates/aqua_shatar.jpg" alt="Aqua Shatar - Professional Swim Academy HTML5 Template" />
-                              Aqua Shatar - Professional Swim Academy HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/auto-repair-maintenance-and-mechanic-center-html5-template/20375120" target="_blank" title="Auto Repair - Maintenance and Mechanic Center HTML5 Template">
-                              <img src="img/our-templates/auto_repair_template.jpg" alt="Auto Repair - Maintenance and Mechanic Center HTML5 Template" />
-                              Auto Repair - Maintenance and Mechanic Center HTML5 Template
-                            </a>
-                          </li>
 
                           <li>
                             <a href="https://themeforest.net/item/banizoo-business-service-html5-template/22463113" target="_blank" title="Banizoo - Business Service HTML5 Template">
@@ -3233,13 +3172,6 @@
                             <a href="https://themeforest.net/item/repair-geek-laptop-and-computer-fixing-service-center-html5-template/20615230" target="_blank" title="Repair Geek - Laptop And Computer Fixing Service Center Template">
                               <img src="img/our-templates/repair_geek_template.jpg" alt="Repair Geek - Laptop And Computer Fixing Service Center Template" />
                               Repair Geek - Laptop And Computer Fixing Service Center Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/restore-computer-mobile-digital-repair-shop-html5-template/19158607?s_rank=8" target="_blank" title="Restore - Computer, Mobile & Digital Repair Shop HTML5 Template ">
-                              <img src="img/our-templates/restore.jpg" alt="Restore - Computer, Mobile & Digital Repair Shop HTML5 Template " />
-                              Restore - Computer, Mobile & Digital Repair Shop HTML5 Template
                             </a>
                           </li>
 
