update the srcare theme

--- a/srcare/index.html
+++ b/srcare/index.html
@@ -3053,129 +3053,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <h3 class="block-title">HTML5 Themes</h3>
-
-                        <ol class="our-products list" id="bwl_html_templates">
-
-                          <li>
-                            <a href="https://themeforest.net/item/banizoo-business-service-html5-template/22463113" target="_blank" title="Banizoo - Business Service HTML5 Template">
-                              <img src="img/our-templates/banizoo.jpg" alt="Banizoo - Business Service HTML5 Template" />
-                              Banizoo - Business Service HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/bicycle-fix-bicycle-repair-maintenance-and-tuneups-shop-html5-template/20135309" target="_blank" title="Bicycle Fix - Bicycle Repair, Maintenance and Tune-Ups Shop HTML5 Template">
-                              <img src="img/our-templates/bicycle_fix_template.jpg" alt="Bicycle Fix - Bicycle Repair, Maintenance and Tune-Ups Shop HTML5 Template" />
-                              Bicycle Fix - Bicycle Repair, Maintenance and Tune-Ups Shop HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/cobbler-mastershoe-repair-and-leather-accessories-service-center/20722930" target="_blank" title="Cobbler Master - Shoe Repair and Leather Accessories Service Center">
-                              <img src="img/our-templates/cobbler_template.jpg" alt="Cobbler Master - Shoe Repair and Leather Accessories Service Center" />
-                              Cobbler Master - Shoe Repair and Leather Accessories Service Center
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/dynamism-responsive-activism-html5-template/17443407" target="_blank" title="Dynamism - Responsive Activism HTML5 Template">
-                              <img src="img/our-templates/dynamism.jpg" alt="Dynamism - Responsive Activism HTML5 Template" />
-                              Dynamism - Responsive Activism HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/ecosma-buddies-environmental-campaign-activism-html5-template/22221693" target="_blank" title="Ecosma Buddies - Environmental Campaign & Activism HTML5 Template">
-                              <img src="img/our-templates/ecosma_buddies.jpg" alt="Ecosma Buddies - Environmental Campaign & Activism HTML5 Template" />
-                              Ecosma Buddies - Environmental Campaign & Activism HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/fit-bone-physiotherapy-and-massage-therapy-center/19868593" target="_blank" title="Fit Bone - Physiotherapy and Massage Therapy Center">
-                              <img src="img/our-templates/fit_bone_template.jpg" alt="Fit Bone - Physiotherapy and Massage Therapy Center" />
-                              Fit Bone - Physiotherapy and Massage Therapy Center
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/fixer-buddies-computer-laptop-repair-center-html5-template/22389656" target="_blank" title="Fixer Buddies - Computer & Laptop Repair Center HTML5 Template">
-                              <img src="img/our-templates/fixer_buddies.jpg" alt="Fixer Buddies - Computer & Laptop Repair Center HTML5 Template" />
-                              Fixer Buddies - Computer & Laptop Repair Center HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/generosity-charity-fundraising-nonprofit-html5-template/20494100" target="_blank" title="Generosity - Charity, Fundraising & Non-Profit HTML5 Template">
-                              <img src="img/our-templates/generosity_template.jpg" alt="Generosity - Charity, Fundraising & Non-Profit HTML5 Template" />
-                              Generosity - Charity, Fundraising & Non-Profit HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/greenlife-nature-environmental-nonprofit-html5-template/18628803" target="_blank" title="Greenlife - Nature & Environmental Non-Profit HTML5 Template">
-                              <img src="img/our-templates/greenlife_template.jpg" alt="Greenlife - Nature & Environmental Non-Profit HTML5 Template" />
-                              Greenlife - Nature & Environmental Non-Profit HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/knowledge-desk-responsive-knowledgebase-html5-template/18408729" target="_blank" title="Knowledge Desk - Responsive Knowledgebase HTML5 Template">
-                              <img src="img/our-templates/kdesk_template.jpg" alt="Knowledge Desk - Responsive Knowledgebase HTML5 Template" />
-                              Knowledge Desk - Responsive Knowledgebase HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/mind-trainer-psychology-and-counseling-center-html5-template/19682769" target="_blank" title="Mind Trainer - Psychology and Counseling Center HTML5 Template">
-                              <img src="img/our-templates/mind_trainer_template.jpg" alt="Mind Trainer - Psychology and Counseling Center HTML5 Template" />
-                              Mind Trainer - Psychology and Counseling Center HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/move-fast-relocation-and-moving-service-html5-template/21002487" target="_blank" title="Move Fast - Relocation and Moving Service HTML5 Template">
-                              <img src="img/our-templates/move_fast.jpg" alt="Move Fast - Relocation and Moving Service HTML5 Template" />
-                              Move Fast - Relocation and Moving Service HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/pakkapati-flooring-service-html5-template/22627787" target="_blank" title="Pakkapati - Flooring Service HTML5 Template">
-                              <img src="img/our-templates/pakkapati.jpg" alt="Pakkapati - Flooring Service HTML5 Template" />
-                              Pakkapati - Flooring Service HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/pet-care-responsive-html5-template/19999552" target="_blank" title="Pet Care - Responsive HTML5 Template ">
-                              <img src="img/our-templates/pet_care.jpg" alt="Pet Care - Responsive HTML5 Template " />
-                              Pet Care - Responsive HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/political-buddies-election-campaign-activism-html5-template/21471300" target="_blank" title="Political Buddies - Election Campaign & Activism HTML5 Template">
-                              <img src="img/our-templates/political_buddies.jpg" alt="Political Buddies - Election Campaign & Activism HTML5 Template" />
-                              Political Buddies - Election Campaign & Activism HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/quala-coat-law-firm-lawyers-html5-template/22526010" target="_blank" title="Quala Coat - Law Firm & Lawyers HTML5 Template">
-                              <img src="img/our-templates/quala_coat.jpg" alt="Quala Coat - Law Firm & Lawyers HTML5 Template" />
-                              Quala Coat - Law Firm & Lawyers HTML5 Template
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="https://themeforest.net/item/repair-geek-laptop-and-computer-fixing-service-center-html5-template/20615230" target="_blank" title="Repair Geek - Laptop And Computer Fixing Service Center Template">
-                              <img src="img/our-templates/repair_geek_template.jpg" alt="Repair Geek - Laptop And Computer Fixing Service Center Template" />
-                              Repair Geek - Laptop And Computer Fixing Service Center Template
-                            </a>
-                          </li>
-
-                        </ol>
+                        <ol class="our-products list" id="bwl_html_templates"></ol>
                       </div>
                     </div>
                   </div>
@@ -3198,7 +3076,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6 text-left">
-            <span>Copyright &copy; 2021 - <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
+            <span>Copyright &copy; 2023 - <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
           </div>
           <div class="col-6 text-right">
             <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
@@ -3216,6 +3094,6 @@
     <script type="text/javascript" src="assets/js/all.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
     <script type="text/javascript" src="assets/js/changelog.js"></script>
-    <script type="text/javascript" src="assets/js/products.js"></script>
+    <script type="text/javascript" src="https://projects.bluewindlab.net/product-thumbs/products.js"></script>
   </body>
 </html>
